--- a/style.css
+++ b/style.css
@@ -17,16 +17,16 @@ canvas {
 }
 
 @keyframes colorchange {
-    0%{background-color: #f4e749;}
-    10%{background-color: #60bbf4;}
-    20%{background-color: aqua;}
-    30%{background-color: #7d42dd;}
-    40%{background-color: #e5903a;}
-    50%{background-color: #a58828;}
-    60%{background-color: #bc3bbc;}
-    70%{background-color: #164a16;}
-    80%{background-color: #d94646;}
-    90%{background-color: #b96c52;}
-    100%{background-color: #bcef32;}
+    0%{background-color: #FF6138;}
+    10%{background-color: #FFBE53;}
+    20%{background-color: #298089;}
+    30%{background-color: #282741;}
+    40%{background-color: #FF6138;}
+    50%{background-color: #FFBE53;}
+    60%{background-color: #298089;}
+    70%{background-color: #282741;}
+    80%{background-color: #FF6138;}
+    90%{background-color: #FFBE53;}
+    100%{background-color: #298089;}
 }
    
